--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="./winawin game version.svg" class="main-img" alt="" />
+    <img src="" alt="" class="logo">
+    <img src="./winawin desktop.svg" class="main-img" alt="" />
   </body>
 </html>
